# restaurant-api

./: .env-docker  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
restaurantapi/: pagination.py  settings.py  urls.py  wsgi.py
restaurants/: models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
restaurants/tests/: test_views.py
