[tool.poetry]
name = "restaurant-api"
version = "0.1.0"
description = "The description of the package"

license = "MIT"

authors = [
    "Sébastien Billion <sebastien.billion@gmail.com>"
]

readme = 'README.md' 

repository = "https://github.com/SBillion/restaurant-api"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.10"
psycopg2 = "^2.8"
django-environ = "^0.4.5"
djangorestframework-yaml = "^1.0.3"
djangorestframework-xml = "^1.4.0"

